<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">onestop</string>
    <string name="action_settings">Settings</string>
    <string name="see_routes">See Routes</string>
    <string name="app">OneStop</string>
    <string name="wallet">Pass Wallet</string>
    <string name="buy">$</string>
    <string name="todo">TODO</string>
    <string name="white_loop">White Loop</string>
    <string name="onestop1" tools:ignore="DuplicateDefinition">OneStop1</string>
    <string name="routes1">Routes</string>
    <string name="red_link">Red Link</string>
    <string name="vairo_express">Vairo Express</string>
    <string name="waupelani_drive">Waupelani Drive</string>
    <string name="boalsburg">Boalsburg</string>
    <string name="toftrees">Toftrees</string>
    <string name="green_link">Green Link</string>
    <string name="bellefonte">Bellefonte</string>
    <string name="blue_loop">Blue Loop</string>
    <string name="buy_passes">Buy Passes</string>
    <string name="onestop">OneStop</string>
    <string name="single_ride">Single Ride</string>
    <string name="single_price">$2.20</string>
    <string name="day_pass">Day Pass</string>
    <string name="day_price">$4.40</string>
    <string name="week_pass">Week Pass</string>
    <string name="week_price">$8.80</string>
    <string name="month_pass">Month Pass</string>
    <string name="month_price">$13.20</string>
    <string name="back3">back</string>
    <string name="onestop3">OneStop</string>
    <string name="distance_away">Distance Away:</string>
    <string name="EIGHT_minutes">8 minutes</string>
    <string name="last_stop">Last Stop:</string>
    <string name="westgate">Westgate</string>
    <string name="_15_people">15 People</string>
    <string name="stop_name">STOP NAME</string>
    <string name="capacity">Capacity:</string>
    <string name="Maps">Maps</string>
    <string name="onestop6">OneStop</string>
    <string name="cvc">CVC</string>
    <string name="credit">Credit</string>
    <string name="ridetype">Single Ride</string>
    <string name="_9_number">9-NUMBER</string>
    <string name="pass_type">Pass Type:</string>
    <string name="card_name">Card Name</string>
    <string name="debit">Debit</string>
    <string name="checkout">CHECKOUT:</string>
    <string name="price">Price:</string>
    <string name="_39_00">$39.00</string>
    <string name="sumbit">SUMBIT</string>
    <string name="back6">BACK</string>
    <string name="backk">backk</string>
    <string name="back">back</string>
</resources>