<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <View
            android:id="@+id/DecorativeDivider1"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_marginTop="60dp"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/DecorativeDivider2"
            android:layout_width="419dp"
            android:layout_height="11dp"
            android:layout_marginBottom="60dp"
            android:background="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/OneStop7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onestop3"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/DecorativeDivider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/DistanceAway"
            android:layout_width="173dp"
            android:layout_height="39dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="30dp"
            android:text="@string/distance_away"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/LastStop"
            app:layout_constraintEnd_toStartOf="@+id/Time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DecorativeDivider1" />

        <TextView
            android:id="@+id/LastStopData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="70dp"
            android:text="@string/westgate"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Time" />

        <TextView
            android:id="@+id/LastStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="70dp"
            android:text="@string/last_stop"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/LastStopData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DistanceAway" />

        <TextView
            android:id="@+id/CapacityData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="5dp"
            android:text="@string/_15_people"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/DecorativeDivider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LastStopData" />

        <TextView
            android:id="@+id/Caps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="5dp"
            android:text="@string/capacity"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/DecorativeDivider2"
            app:layout_constraintEnd_toStartOf="@+id/CapacityData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LastStop" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="70dp"
            android:text="@string/EIGHT_minutes"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/LastStopData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DecorativeDivider1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/ROUTENAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/stop_name"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/SampleMap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DecorativeDivider1" />

        <ImageView
            android:id="@+id/SampleMap"
            android:layout_width="211dp"
            android:layout_height="209dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/DistanceAway"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ROUTENAME"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/Back4"
            android:layout_width="188dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/BACK"
            android:text="@string/back3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Caps"
            app:layout_constraintVertical_bias="0.74" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
