<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <View
            android:id="@+id/DecorativeDivider1"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_marginTop="60dp"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/DecorativeDivider2"
            android:layout_width="419dp"
            android:layout_height="11dp"
            android:layout_marginBottom="60dp"
            android:background="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onestop"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/DecorativeDivider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_passes"
            android:textColor="#F3F2EF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DecorativeDivider1" />


        <Button
            android:id="@+id/SingleButton"
            android:layout_width="302dp"
            android:layout_height="54dp"
            android:layout_marginTop="90dp"
            android:background="@color/white"
            android:text="@string/single_ride"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/DecorativeDivider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pageTitle"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/DayPassButton"
            android:layout_width="302dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="@string/day_pass"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/WeekPassButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SingleButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/WeekPassButton"
            android:layout_width="302dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="@string/week_pass"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DayPassButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/MonthPassButton"
            android:layout_width="302dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="@string/month_pass"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/DecorativeDivider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WeekPassButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/backed"
            android:layout_width="302dp"
            android:layout_height="54dp"
            android:layout_marginTop="56dp"
            android:background="@color/purple_200"
            android:text="@string/back3"
            android:textColor="@color/white"
            app:backgroundTint="@color/BACK"
            app:layout_constraintBottom_toBottomOf="@+id/DecorativeDivider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MonthPassButton"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>