<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <View
            android:id="@+id/DecorativeDivider1"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_marginTop="60dp"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/DecorativeDivider2"
            android:layout_width="419dp"
            android:layout_height="11dp"
            android:layout_marginBottom="60dp"
            android:background="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/NonMapBackground"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/DecorativeDivider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DecorativeDivider1" />

        <TextView
            android:id="@+id/OneStop7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/onestop"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/DecorativeDivider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/DecorativeDivider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/NonMapBackground"
            app:layout_constraintVertical_bias="0.288" />

        <ScrollView
            android:layout_width="395dp"
            android:layout_height="729dp"
            app:layout_constraintEnd_toEndOf="@id/DecorativeDivider2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/DecorativeDivider1"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/BLButton"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/white"
                    android:text="@string/blue_loop"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/WLButton"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/white"
                    android:text="@string/white_loop"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/RLButton"
                    android:layout_width="363dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/white"
                    android:text="@string/red_link"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/VEButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/white"
                    android:text="@string/vairo_express"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/WDButton"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/white"
                    android:text="@string/waupelani_drive"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/BButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="22dp"
                    android:background="@color/white"
                    android:text="@string/boalsburg"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/HMButton"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/white"
                    android:text="@string/toftrees"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/BACK"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/white"
                    android:text="@string/toftrees"
                    android:textColor="@color/black"
                    tools:text="BACK" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>